# tag_replacements

./: .gitignore  Cargo.toml  build.bat
config/: app.yml  log4rs.yml
src/: main.rs
src/mods/: converter.rs  file_manager.rs  mod.rs  settings.rs  worker.rs
test_files/: translated.txt  vec.json
test_files/converted/: .converted.txt
