[package]
name = "tag_replacements"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"


log = "0.4.17"
log4rs = "1.2.0"
config = { version = "^0.14.0", features = ["yaml"] }
fs_extra = "^1.3.0"
glob = "^0.3.1"
anyhow = "^1.0.71"
tokio = { version = "1.28.1", features = ["full"] }



# build release optimization size
[profile.release]
debug = false
strip = true
opt-level = "s"
lto = true
codegen-units = 1